--- a/app/src/main/res/layout/fragment_io.xml
+++ b/app/src/main/res/layout/fragment_io.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:background="@color/origin"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_height="100dp"
-        android:layout_width="100dp"
-        android:text="IO">
-    </TextView>
+    <ImageButton
+        android:id="@+id/input_image_button"
+        android:layout_marginLeft="100dp"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:background="@color/origin"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:src="@drawable/input">
+    </ImageButton>
 </LinearLayout>
