--- a/app/src/main/res/layout/item_sentence.xml
+++ b/app/src/main/res/layout/item_sentence.xml
@@ -4,10 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
+        android:layout_marginLeft="5dp"
+        android:layout_marginVertical="8dp"
+        android:fontFamily="@font/nvshen"
+        android:id="@+id/example_text_view"
+        android:gravity="center_vertical"
+        android:text="the transit lounge at an airport"
+        android:textSize="18sp"
         android:layout_width="match_parent"
-        android:layout_height="20dp" />
+        android:layout_height="wrap_content" />
+
+    <View
+        android:background="@color/line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp">
+    </View>
 
     <TextView
+        android:layout_marginLeft="5dp"
+        android:layout_marginVertical="8dp"
+        android:fontFamily="@font/zhanku"
+        android:id="@+id/example_translation_text_view"
+        android:gravity="center_vertical"
+        android:text="机场的中转候机楼"
+        android:textSize="20sp"
         android:layout_width="match_parent"
-        android:layout_height="20dp" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
